test/modules/errors/issue-14537.good
issue-14537.chpl:12: error: modules (like 'bar' here) cannot be called like procedures
